--- a/index2.html
+++ b/index2.html
@@ -1,151 +1,261 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Loading Effects for Grid Items | Demo 2</title>
-		<meta name="description" content="Loading Effects for Grid Items with CSS Animations" />
-		<meta name="keywords" content="css animation, loading effect, google plus, grid items, masonry" />
-		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="../favicon.ico">
-		<link rel="stylesheet" type="text/css" href="css/reset.min.css"/>
-		<link rel="stylesheet" type="text/css" href="css/default.css" />
-		<link rel="stylesheet" type="text/css" href="css/component.css" />
-		<script src="js/modernizr.custom.js"></script>
-	</head>
-	<body>
 
-		<div class="container">
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Loading Effects for Grid Items | Demo 2</title>
+    <meta name="description" content="Loading Effects for Grid Items with CSS Animations" />
+    <meta name="keywords" content="css animation, loading effect, google plus, grid items, masonry" />
+    <meta name="author" content="Codrops" />
+    <link rel="shortcut icon" href="../favicon.ico">
+    <link rel="stylesheet" type="text/css" href="css/reset.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/default.css" />
+    <link rel="stylesheet" type="text/css" href="css/component.css" />
+    <link rel="stylesheet" type="text/css" href="css/jquery.fancybox.css" />
+    <script src="js/modernizr.custom.js"></script>
+</head>
 
-			<div class="containerBrands">
-				<p class="logo">Style Mixer</p>
-				<div class="menuArea"><img src="images/menu.png" alt=""></div>
-				<div class="clients">
-					<ul>
-						<li>INTERIOR, LIFESTYLE AND SET DESIGN</li>
-						<li>MENSWEAR</li>
-						<li>WOMENSWEAR</li>
-						<li class="selected">JEWELRY, WATCHES LEATHER GOODS AND ACCESSORIES</li>
-						<li>PRINT</li>
-					</ul>
-				</div>
-				<div class="copy">
-					<p>©Credits: Mr Studio</p>
-				</div>
+<body>
 
-			</div>
+    <div class="container">
 
-			<div class=" containerGallery">
-				<div class="arrowTop"><img src="" alt="">
-				</div>
-				<ul class="grid effect-2" id="grid">
-					<li id="img1"><figure><img src="images/1.jpg"></figure></li>
-					<li id="img2"><figure><img src="images/3.jpg"></figure></li>
-					<li id="img3"><figure><img src="images/4.jpg"></figure></li>
-					<li><video muted controls loop autoplay>
+        <div class="containerBrands">
+            <p class="logo">Style Mixer</p>
+            <div class="menuArea"><img src="images/menu.png" alt=""></div>
+            <div class="clients">
+                <ul class="filter">
+                    <li data-filter="interior">INTERIOR, LIFESTYLE AND SET DESIGN</li>
+                    <li data-filter="menswear">MENSWEAR</li>
+                    <li data-filter="womenswear">WOMENSWEAR</li>
+                    <li data-filter="jewerly" class="selected">JEWELRY, WATCHES LEATHER GOODS AND ACCESSORIES</li>
+                    <li data-filter="print">PRINT</li>
+                </ul>
+            </div>
+            <div class="copy">
+                <p>©Credits: Mr Studio</p>
+            </div>
+
+        </div>
+
+        <div class="containerGallery">
+            <a class="arrowTop" href="#grid"></a>
+            <ul class="grid effect-2" id="grid">
+                <li class="item" data-filter="jewerly" id="img1">
+                    <a href="images/1.jpg" data-fancybox>
+                        <figure><img src="images/1.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="womenswear" id="img2">
+                    <a href="images/3.jpg" data-fancybox>
+                        <figure><img src="images/3.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="interior" id="img3">
+                    <a href="images/4.jpg" data-fancybox>
+                        <figure><img src="images/4.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="print"><video muted controls loop autoplay>
 						<source src="images/video2.mp4" type="video/mp4">
 					</video></li>
-					<li><figure><img src="images/13.jpg"></figure></li>
-					<li><figure><img src="images/2.jpg"></figure></li>
-					<li><video muted controls loop autoplay>
+                <li class="item" data-filter="design">
+                    <a href="images/13.jpg" data-fancybox>
+                        <figure><img src="images/13.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="womenswear">
+                    <a href="images/2.jpg" data-fancybox>
+                        <figure><img src="images/2.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="print"><video muted controls loop autoplay>
 						<source src="images/video.mp4" type="video/mp4">
 					</video></li>
-					<li> <figure><img src="images/14.png"> </figure></li>
-					<li> <figure><img src="images/5.jpg"> </figure></li>
-					<li> <figure><img src="images/6.jpg"> </figure></li>
-					<li> <figure><img src="images/7.jpg"> </figure></li>
-					<li> <figure><img src="images/8.jpg"> </figure></li>
-					<li> <figure><img src="images/9.jpg"> </figure></li>
-					<li> <figure><img src="images/12.jpg"> </figure></li>
-					<li> <figure><img src="images/13.jpg"> </figure></li>
-					<li> <figure><img src="images/10.jpg"> </figure></li>
-					<li> <figure><img src="images/11.jpg"> </figure></li>
-					<li> <figure><img src="images/2.jpg"> </figure></li>
-					<li> <figure><img src="images/14.jpg"> </figure></li>
-					<li> <figure><img src="images/1.jpg"> </figure></li>
-					<li> <figure><img src="images/3.jpg"> </figure></li>
-					<li> <figure><img src="images/4.jpg"> </figure></li>
-					<li> <figure><img src="images/5.jpg"> </figure></li>
-					<li> <figure><img src="images/6.jpg"> </figure></li>
-					<li> <figure><img src="images/7.jpg"> </figure></li>
-					<li> <figure><img src="images/8.jpg"> </figure></li>
-					<li> <figure><img src="images/9.jpg"> </figure></li>
-					<li> <figure><img src="images/12.jpg"> </figure></li>
-					<li> <figure><img src="images/13.jpg"> </figure></li>
-					<li> <figure><img src="images/10.jpg"> </figure></li>
-					<li> <figure><img src="images/11.jpg"> </figure></li>
-					<li> <figure><img src="images/2.jpg"> </figure></li>
-					<li> <figure><img src="images/14.png"> </figure></li>
-					<li> <figure><img src="images/1.jpg"> </figure></li>
-					<li> <figure><img src="images/3.jpg"> </figure></li>
-					<li> <figure><img src="images/4.jpg"> </figure></li>
-					<li> <img src="images/5.jpg"> </li>
-					<li> <img src="images/6.jpg"> </li>
-					<li> <img src="images/7.jpg"> </li>
-					<li> <img src="images/8.jpg"> </li>
-					<li> <img src="images/9.jpg"> </li>
-					<li> <img src="images/12.jpg"> </li>
-					<li> <img src="images/13.jpg"> </li>
-					<li> <img src="images/10.jpg"> </li>
-					<li> <img src="images/11.jpg"> </li>
-					<li> <img src="images/2.jpg"> </li>
-					<li> <img src="images/14.jpg"> </li>
-					<li> <img src="images/1.jpg"> </li>
-					<li> <img src="images/3.jpg"> </li>
-					<li> <img src="images/4.jpg"> </li>
-					<li> <img src="images/5.jpg"> </li>
-					<li> <img src="images/6.jpg"> </li>
-					<li> <img src="images/7.jpg"> </li>
-					<li> <img src="images/8.jpg"> </li>
-					<li> <img src="images/9.jpg"> </li>
-					<li> <img src="images/12.jpg"> </li>
-					<li> <img src="images/13.jpg"> </li>
-					<li> <img src="images/10.jpg"> </li>
-					<li> <img src="images/11.jpg"> </li>
-					<li> <img src="images/2.jpg"> </li>
-					<li> <img src="images/14.jpg"> </li>
-					<li> <img src="images/1.jpg"> </li>
-					<li> <img src="images/3.jpg"> </li>
-					<li> <img src="images/4.jpg"> </li>
-					<li> <img src="images/5.jpg"> </li>
-					<li> <img src="images/6.jpg"> </li>
-					<li> <img src="images/7.jpg"> </li>
-					<li> <img src="images/8.jpg"> </li>
-					<li> <img src="images/9.jpg"> </li>
-					<li> <img src="images/12.jpg"> </li>
-					<li> <img src="images/13.jpg"> </li>
-					<li> <img src="images/10.jpg"> </li>
-					<li> <img src="images/11.jpg"> </li>
-					<li> <img src="images/2.jpg"> </li>
-					<li><img src="images/14.jpg"> </li>
-					<li> <img src="images/1.jpg"> </li>
-					<li> <img src="images/3.jpg"> </li>
-					<li> <img src="images/4.jpg"> </li>
-					<li> <img src="images/5.jpg"> </li>
-					<li> <img src="images/6.jpg"> </li>
-					<li> <img src="images/7.jpg"> </li>
-					<li> <img src="images/8.jpg"> </li>
-					<li> <img src="images/9.jpg"> </li>
-					<li> <img src="images/3.jpg"> </li>
-					<li> <img src="images/5.jpg"> </li>
-					<li> <img src="images/2.jpg"> </li>
-				</ul>
-				<div class="nextProject">
-					<p>Next Category</p>
-				</div>
-			</div>
-		</div>
-		<script src="js/masonry.pkgd.min.js"></script>
-		<script src="js/imagesloaded.js"></script>
-		<script src="js/classie.js"></script>
-		<script src="js/AnimOnScroll.js"></script>
-		<script>
-			new AnimOnScroll( document.getElementById( 'grid' ), {
-				minDuration : 0.4,
-				maxDuration : 0.7,
-				viewportFactor : 0.2
-			} );
-		</script>
-	</body>
+                <li class="item" data-filter="interior">
+                    <a href="images/5.jpg" data-fancybox>
+                        <figure>
+                            <img src="images/5.jpg">
+                        </figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="menswear">
+                    <a href="images/6.jpg" data-fancybox>
+                        <figure><img src="images/6.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="menswear">
+                    <a href="images/7.jpg" data-fancybox>
+                        <figure><img src="images/7.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="menswear">
+                    <a href="images/8.jpg" data-fancybox>
+                        <figure><img src="images/8.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="womenswear">
+                    <a href="images/9.jpg" data-fancybox>
+                        <figure><img src="images/9.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="jewerly">
+                    <a href="images/12.jpg" data-fancybox>
+                        <figure><img src="images/12.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="design">
+                    <a href="images/13.jpg" data-fancybox>
+                        <figure><img src="images/13.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="womenswear">
+                    <a href="images/10.jpg" data-fancybox>
+                        <figure><img src="images/10.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="womenswear">
+                    <a href="images/11.jpg" data-fancybox>
+                        <figure><img src="images/11.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="womenswear">
+                    <a href="images/2.jpg" data-fancybox>
+                        <figure><img src="images/2.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="jewerly">
+                    <a href="images/1.jpg" data-fancybox>
+                        <figure><img src="images/1.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="womenswear">
+                    <a href="images/3.jpg" data-fancybox>
+                        <figure><img src="images/3.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="interior">
+                    <a href="images/4.jpg" data-fancybox>
+                        <figure><img src="images/4.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="interior">
+                    <a href="images/5.jpg" data-fancybox>
+                        <figure><img src="images/5.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="menswear">
+                    <a href="images/6.jpg" data-fancybox>
+                        <figure><img src="images/6.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="menswear">
+                    <a href="images/7.jpg" data-fancybox>
+                        <figure><img src="images/7.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="menswear">
+                    <a href="images/8.jpg" data-fancybox>
+                        <figure><img src="images/8.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="womenswear">
+                    <a href="images/9.jpg" data-fancybox>
+                        <figure><img src="images/9.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="jewerly">
+                    <a href="images/.jpg" data-fancybox>
+                        <figure><img src="images/12.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="design">
+                    <a href="images/13.jpg" data-fancybox>
+                        <figure><img src="images/13.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="womenswear">
+                    <a href="images/10.jpg" data-fancybox>
+                        <figure><img src="images/10.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="womenswear">
+                    <a href="images/11.jpg" data-fancybox>
+                        <figure><img src="images/11.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="womenswear">
+                    <a href="images/2.jpg" data-fancybox>
+                        <figure><img src="images/2.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="jewerly">
+                    <a href="images/1.jpg" data-fancybox>
+                        <figure><img src="images/1.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="womenswear">
+                    <a href="images/3.jpg" data-fancybox>
+                        <figure><img src="images/3.jpg"></figure>
+                    </a>
+                </li>
+                <li class="item" data-filter="interior">
+                    <a href="images/4.jpg" data-fancybox>
+                        <figure><img src="images/4.jpg"></figure>
+                    </a>
+                </li>
+            </ul>
+            <div class="nextProject">
+                <p>Next Category</p>
+            </div>
+        </div>
+    </div>
+    <script src="js/jquery-2.2.0.min.js"></script>
+    <script src="js/masonry-3.1.4.js"></script>
+    <script src="js/imagesloaded.js"></script>
+    <script src="js/masonry.filter.js"></script>
+    <script src="js/jquery.fancybox.js"></script>
+    <script>
+        $(function() {
+            var self = $("#grid");
+
+            self.imagesLoaded(function() {
+                self.masonry({
+                    gutterWidth: 15,
+                    isAnimated: true,
+                    itemSelector: ".item"
+                });
+            });
+
+            $(".filter li").click(function(e) {
+                e.preventDefault();
+                var filter = $(this).attr("data-filter");
+
+                self.masonryFilter({
+                    filter: function() {
+                        if (!filter) return true;
+                        return $(this).attr("data-filter") == filter;
+                    }
+                });
+            });
+
+            $(".arrowTop").on('click', function(event) {
+                if (this.hash !== "") {
+                    event.preventDefault();
+                    var hash = this.hash;
+
+                    $('html, body').animate({
+                        scrollTop: $(hash).offset().top
+                    }, 800, function() {
+
+                        window.location.hash = hash;
+                    });
+                }
+            });
+        });
+
+    </script>
+</body>
+
 </html>
