add splash page

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 </head>
 
 <body>
-
-    <div class="container-fluid">
+    <div id="splashPage">
+    </div>
+    <div class="container-fluid" style="opacity: 0">
       <div class="containerBrands">
         <header>
           <p class="logo">Style Mixer</p>
@@ -33,12 +34,12 @@
         </header>
         <div class="clients">
           <ul class="filter">
-            <li class="selected" data-filter>MIXER</li>
-            <li data-filter="interior">INTERIOR, LIFESTYLE AND SET DESIGN</li>
-            <li data-filter="menswear">MENSWEAR</li>
-            <li data-filter="womenswear">WOMENSWEAR</li>
-            <li data-filter="jewerly">JEWELRY, WATCHES LEATHER GOODS AND ACCESSORIES</li>
-            <li data-filter="print">PRINT</li>
+            <li class="selected" data-filter data-count="-1">MIXER</li>
+            <li data-filter="interior" data-count="0">INTERIOR, LIFESTYLE AND SET DESIGN</li>
+            <li data-filter="menswear" data-count="1">MENSWEAR</li>
+            <li data-filter="womenswear" data-count="2">WOMENSWEAR</li>
+            <li data-filter="jewerly" data-count="3">JEWELRY, WATCHES LEATHER GOODS AND ACCESSORIES</li>
+            <li data-filter="print" data-count="4">PRINT</li>
           </ul>
         </div>
         <div class="copy">
