Effect filter fixed

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </video></li>
 
           <li class="item" data-filter="jewerly" id="img1">
-            <a href="images/1.jpg" data-fancybox>
+            <a class="fancybox" href="images/1.jpg" title="Gioiello bello">
               <figure><img src="images/1.jpg"></figure>
             </a>
           </li>
